generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

//////////////////////////////////////////////////////
// ENUMS
//////////////////////////////////////////////////////

enum Role {
  CUSTOMER
  ADMIN
}

enum OrderStatus {
  PENDING
  CONFIRMED
  PROCESSING
  SHIPPED
  DELIVERED
  CANCELLED
}

enum PaymentStatus {
  PENDING
  PAID
  FAILED
  REFUNDED
}

//////////////////////////////////////////////////////
// USER
//////////////////////////////////////////////////////

model User {
  id           String   @id @default(cuid())
  firstName    String
  lastName     String
  email        String   @unique
  passwordHash String
  phone        String?
  role         Role     @default(CUSTOMER)

  isVerified   Boolean  @default(false)

  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  addresses    Address[]
  cart         Cart?
  orders       Order[]
  reviews      Review[]
  wishlist     Wishlist[]
  notifications Notification[]

  @@index([email])
}

//////////////////////////////////////////////////////
// ADDRESS
//////////////////////////////////////////////////////

model Address {
  id           String @id @default(cuid())

  userId       String

  fullName     String
  phone        String

  addressLine1 String
  addressLine2 String?

  city         String
  state        String
  postalCode   String
  country      String

  isDefault    Boolean @default(false)

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  orders Order[]

  @@index([userId])
}

//////////////////////////////////////////////////////
// CATEGORY
//////////////////////////////////////////////////////

model Category {
  id          String @id @default(cuid())

  name        String @unique
  slug        String @unique

  description String?

  products Product[]
}

//////////////////////////////////////////////////////
// BRAND
//////////////////////////////////////////////////////

model Brand {
  id       String @id @default(cuid())

  name     String @unique
  slug     String @unique

  products Product[]
}

//////////////////////////////////////////////////////
// PRODUCT
//////////////////////////////////////////////////////

model Product {
  id          String @id @default(cuid())

  categoryId  String
  brandId     String?

  name        String
  slug        String @unique

  description String

  sku         String @unique

  price       Decimal @db.Decimal(10,2)

  stock       Int

  isActive    Boolean @default(true)

  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  category Category @relation(fields:[categoryId], references:[id])

  brand Brand? @relation(fields:[brandId], references:[id])

  images ProductImage[]

  reviews Review[]

  cartItems CartItem[]

  orderItems OrderItem[]

  wishlists Wishlist[]

  @@index([categoryId])
  @@index([brandId])
  @@index([name])
}

//////////////////////////////////////////////////////
// PRODUCT IMAGE
//////////////////////////////////////////////////////

model ProductImage {
  id        String @id @default(cuid())

  productId String

  imageUrl  String

  isPrimary Boolean @default(false)

  product Product @relation(fields:[productId], references:[id], onDelete:Cascade)

  @@index([productId])
}

//////////////////////////////////////////////////////
// REVIEW
//////////////////////////////////////////////////////

model Review {
  id        String @id @default(cuid())

  userId    String
  productId String

  rating    Int

  comment   String?

  createdAt DateTime @default(now())

  user User @relation(fields:[userId], references:[id], onDelete:Cascade)

  product Product @relation(fields:[productId], references:[id], onDelete:Cascade)

  @@unique([userId, productId])

  @@index([productId])
}

//////////////////////////////////////////////////////
// WISHLIST
//////////////////////////////////////////////////////

model Wishlist {
  id        String @id @default(cuid())

  userId    String
  productId String

  createdAt DateTime @default(now())

  user User @relation(fields:[userId], references:[id], onDelete:Cascade)

  product Product @relation(fields:[productId], references:[id], onDelete:Cascade)

  @@unique([userId, productId])
}

//////////////////////////////////////////////////////
// CART
//////////////////////////////////////////////////////

model Cart {
  id        String @id @default(cuid())

  userId    String @unique

  createdAt DateTime @default(now())

  user User @relation(fields:[userId], references:[id], onDelete:Cascade)

  items CartItem[]
}

//////////////////////////////////////////////////////
// CART ITEM
//////////////////////////////////////////////////////

model CartItem {
  id        String @id @default(cuid())

  cartId    String

  productId String

  quantity  Int

  cart Cart @relation(fields:[cartId], references:[id], onDelete:Cascade)

  product Product @relation(fields:[productId], references:[id])

  @@unique([cartId, productId])
}

//////////////////////////////////////////////////////
// ORDER
//////////////////////////////////////////////////////

model Order {
  id String @id @default(cuid())

  userId String

  addressId String

  totalAmount Decimal @db.Decimal(10,2)

  status OrderStatus @default(PENDING)

  paymentStatus PaymentStatus @default(PENDING)

  createdAt DateTime @default(now())

  user User @relation(fields:[userId], references:[id])

  address Address @relation(fields:[addressId], references:[id])

  items OrderItem[]

  payment Payment?

  coupons Coupon[]
}

//////////////////////////////////////////////////////
// ORDER ITEM
//////////////////////////////////////////////////////

model OrderItem {
  id String @id @default(cuid())

  orderId String

  productId String

  quantity Int

  unitPrice Decimal @db.Decimal(10,2)

  order Order @relation(fields:[orderId], references:[id], onDelete:Cascade)

  product Product @relation(fields:[productId], references:[id])

  @@index([orderId])
}

//////////////////////////////////////////////////////
// PAYMENT
//////////////////////////////////////////////////////

model Payment {
  id String @id @default(cuid())

  orderId String @unique

  paymentMethod String

  transactionId String @unique

  amount Decimal @db.Decimal(10,2)

  status PaymentStatus

  order Order @relation(fields:[orderId], references:[id], onDelete:Cascade)
}

//////////////////////////////////////////////////////
// COUPON
//////////////////////////////////////////////////////

model Coupon {
  id String @id @default(cuid())

  code String @unique

  discount Decimal @db.Decimal(10,2)

  expiryDate DateTime

  usageLimit Int

  orders Order[]
}

//////////////////////////////////////////////////////
// NOTIFICATION
//////////////////////////////////////////////////////

model Notification {
  id String @id @default(cuid())

  userId String

  title String

  message String

  isRead Boolean @default(false)

  createdAt DateTime @default(now())

  user User @relation(fields:[userId], references:[id], onDelete:Cascade)

  @@index([userId])
}